# straightedge-compass

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  SimpleVertexShader.glsl  main.cpp
src/base/: CMakeLists.txt  base.hpp  loadShader.cpp  loadShader.hpp  object.cpp
src/renderer/: CMakeLists.txt  change.cpp  init.cpp  load.cpp  mainloop.cpp  renderer.hpp  state.cpp
